-- ============================================================
-- Festival O2O Platform — PostgreSQL (Supabase) DDL Schema
-- ============================================================

-- ============================================================
-- 1. member — 회원 정보
-- ============================================================
CREATE TABLE IF NOT EXISTS member (
    member_no              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_id              VARCHAR(50) NOT NULL UNIQUE,
    password               VARCHAR(255) NOT NULL,
    name                   VARCHAR(50) NOT NULL,
    phone                  VARCHAR(20) NOT NULL,
    grade                  VARCHAR(20) NOT NULL DEFAULT 'BRONZE' CHECK (grade IN ('BRONZE','SILVER','GOLD','EMERALD','DIAMOND','VIP','SVIP','VVIP')),
    total_purchase_amount  BIGINT NOT NULL DEFAULT 0,
    join_date              TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    last_login             TIMESTAMP WITH TIME ZONE,
    face_landmark_data     TEXT,
    is_face_registered     BOOLEAN NOT NULL DEFAULT false,
    notif_event            BOOLEAN NOT NULL DEFAULT true,
    notif_payment          BOOLEAN NOT NULL DEFAULT true,
    notif_coupon           BOOLEAN NOT NULL DEFAULT true,
    is_active              BOOLEAN NOT NULL DEFAULT true
);

-- 등급 자동 갱신 트리거 함수
CREATE OR REPLACE FUNCTION update_member_grade()
RETURNS TRIGGER AS $$
BEGIN
    -- 특수 계정은 결제 금액에 따른 자동 등급 변경에서 제외
    IF NEW.grade IN ('VIP', 'SVIP', 'VVIP') THEN
        RETURN NEW;
    END IF;

    IF NEW.total_purchase_amount >= 10000000 THEN
        NEW.grade = 'DIAMOND';
    ELSIF NEW.total_purchase_amount >= 1000000 THEN
        NEW.grade = 'EMERALD';
    ELSIF NEW.total_purchase_amount >= 500000 THEN
        NEW.grade = 'GOLD';
    ELSIF NEW.total_purchase_amount >= 150000 THEN
        NEW.grade = 'SILVER';
    ELSE
        NEW.grade = 'BRONZE';
    END IF;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TRIGGER trg_update_member_grade
BEFORE UPDATE OF total_purchase_amount ON member
FOR EACH ROW
EXECUTE FUNCTION update_member_grade();

-- ============================================================
-- 2. event — 행사/공연 정보
-- ============================================================
CREATE TABLE IF NOT EXISTS event (
    event_no               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_name             VARCHAR(200) NOT NULL,
    category               VARCHAR(50) NOT NULL CHECK (category IN ('콘서트','지역축제','대학축제','박람회')),
    venue                  VARCHAR(200) NOT NULL,
    event_date             DATE NOT NULL,
    start_time             TIME NOT NULL,
    end_time               TIME NOT NULL,
    description            TEXT,
    thumbnail_url          VARCHAR(500),
    badge_label            VARCHAR(30),
    is_hot                 BOOLEAN NOT NULL DEFAULT false,
    is_active              BOOLEAN NOT NULL DEFAULT true,
    view_count             INTEGER NOT NULL DEFAULT 0,
    created_at             TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE INDEX idx_event_category ON event(category);
CREATE INDEX idx_event_date ON event(event_date);
CREATE INDEX idx_event_active ON event(is_active);

-- ============================================================
-- 3. event_zone — 행사 구역 정보
-- ============================================================
CREATE TABLE IF NOT EXISTS event_zone (
    zone_no                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_no               BIGINT NOT NULL REFERENCES event(event_no) ON DELETE CASCADE,
    zone_name              VARCHAR(100) NOT NULL,
    zone_type              VARCHAR(50) NOT NULL CHECK (zone_type IN ('스탠딩','지정석','VIP')),
    total_capacity         INTEGER NOT NULL,
    remaining_capacity     INTEGER NOT NULL CHECK (remaining_capacity >= 0),
    price                  DECIMAL(10,2) NOT NULL,
    color_code             VARCHAR(20)
);

CREATE INDEX idx_zone_event ON event_zone(event_no);

-- ============================================================
-- 4. coupon — 보유 쿠폰 (참조 무결성 위해 먼저 생성)
-- ============================================================
CREATE TABLE IF NOT EXISTS coupon (
    coupon_no              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no) ON DELETE CASCADE,
    coupon_name            VARCHAR(100) NOT NULL,
    discount_type          VARCHAR(20) NOT NULL CHECK (discount_type IN ('PERCENT','AMOUNT')),
    discount_value         DECIMAL(10,2) NOT NULL,
    min_purchase           DECIMAL(10,2) NOT NULL DEFAULT 0,
    expires_at             TIMESTAMP WITH TIME ZONE NOT NULL,
    is_used                BOOLEAN NOT NULL DEFAULT false,
    used_at                TIMESTAMP WITH TIME ZONE,
    used_order_no          BIGINT 
);

-- ============================================================
-- 5. ticket_order — 티켓 예매/주문 내역
-- ============================================================
CREATE TABLE IF NOT EXISTS ticket_order (
    order_no               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no),
    event_no               BIGINT NOT NULL REFERENCES event(event_no),
    zone_no                BIGINT NOT NULL REFERENCES event_zone(zone_no),
    event_name             VARCHAR(200) NOT NULL,
    zone_name              VARCHAR(100) NOT NULL,
    quantity               INTEGER NOT NULL DEFAULT 1,
    unit_price             DECIMAL(10,2) NOT NULL,
    payment_amount         DECIMAL(10,2) NOT NULL,
    reservation_status     VARCHAR(50) NOT NULL DEFAULT '결제대기' CHECK (reservation_status IN ('결제대기','결제완료','입장완료','취소')),
    payment_datetime       TIMESTAMP WITH TIME ZONE,
    pg_provider            VARCHAR(50),
    pg_tid                 VARCHAR(200),
    order_uid              VARCHAR(200),
    identity_ci            VARCHAR(500),
    qr_token               VARCHAR(500),
    qr_expires_at          TIMESTAMP WITH TIME ZONE,
    coupon_no              BIGINT REFERENCES coupon(coupon_no),
    created_at             TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

ALTER TABLE coupon ADD CONSTRAINT fk_coupon_order FOREIGN KEY (used_order_no) REFERENCES ticket_order(order_no) ON DELETE SET NULL;

CREATE INDEX idx_order_member ON ticket_order(member_no);
CREATE INDEX idx_order_status ON ticket_order(reservation_status);
CREATE INDEX idx_order_pg_tid ON ticket_order(pg_tid);

-- ============================================================
-- 6. cart — 장바구니
-- ============================================================
CREATE TABLE IF NOT EXISTS cart (
    cart_no                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no) ON DELETE CASCADE,
    product_type           VARCHAR(50) NOT NULL CHECK (product_type IN ('티켓','굿즈','푸드트럭')),
    product_name           VARCHAR(200) NOT NULL,
    event_no               BIGINT REFERENCES event(event_no) ON DELETE SET NULL,
    option_status          VARCHAR(200),
    thumbnail_url          VARCHAR(500),
    unit_price             DECIMAL(10,2) NOT NULL,
    quantity               INTEGER NOT NULL DEFAULT 1,
    is_selected            BOOLEAN NOT NULL DEFAULT true,
    reg_datetime           TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE INDEX idx_cart_member ON cart(member_no);

-- ============================================================
-- 7. wishlist — 찜 목록
-- ============================================================
CREATE TABLE IF NOT EXISTS wishlist (
    wish_no                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no) ON DELETE CASCADE,
    event_no               BIGINT NOT NULL REFERENCES event(event_no) ON DELETE CASCADE,
    event_name             VARCHAR(200) NOT NULL,
    reg_datetime           TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    UNIQUE (member_no, event_no)
);

-- ============================================================
-- 8. review — 행사 후기
-- ============================================================
CREATE TABLE IF NOT EXISTS review (
    review_no              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no),
    event_no               BIGINT NOT NULL REFERENCES event(event_no),
    order_no               BIGINT NOT NULL REFERENCES ticket_order(order_no),
    rating                 SMALLINT NOT NULL CHECK (rating BETWEEN 1 AND 5),
    content                TEXT NOT NULL,
    created_at             TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    UNIQUE (member_no, order_no)
);

CREATE INDEX idx_review_event ON review(event_no);

-- ============================================================
-- 9. inquiry — 1:1 고객 문의
-- ============================================================
CREATE TABLE IF NOT EXISTS inquiry (
    inquiry_no             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    member_no              BIGINT NOT NULL REFERENCES member(member_no) ON DELETE CASCADE,
    title                  VARCHAR(200) NOT NULL,
    content                TEXT NOT NULL,
    status                 VARCHAR(50) NOT NULL DEFAULT '대기중' CHECK (status IN ('대기중','답변완료')),
    answer                 TEXT,
    answered_at            TIMESTAMP WITH TIME ZONE,
    created_at             TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE INDEX idx_inquiry_member ON inquiry(member_no);
CREATE INDEX idx_inquiry_status ON inquiry(status);

-- ============================================================
-- 테스트용 초기 데이터 셋팅
-- ============================================================
INSERT INTO member (member_id, password, name, phone, grade, total_purchase_amount, is_face_registered) VALUES
('Ohayul',  '$2a$10$SAMPLE_HASH_REPLACE_IN_PROD_001', '오하율', '010-1234-5678', 'emerald',   650000, true),
('Imsohee',  '$2a$10$SAMPLE_HASH_REPLACE_IN_PROD_002', '임소희', '010-9876-5432', 'SVIP', 200000, false),
('Gangjinwon','$2a$10$SAMPLE_HASH_REPLACE_IN_PROD_003', '강진원', '010-5555-1234', 'VIP',  2100000, true);

INSERT INTO event (event_name, category, venue, event_date, start_time, end_time, description, badge_label, is_hot) VALUES
('2025 서울 뮤직 페스티벌',   '콘서트',   'DCC 대전컨벤션센터',  '2025-08-15', '18:00:00', '23:00:00', '국내 최대 규모의 여름 음악 축제. 국내외 아티스트 30팀 출연.',         'HOT',    true),
('킨텍스 K-컬처 박람회 2025', '박람회',   '킨텍스 제1전시장',    '2025-09-20', '10:00:00', '20:00:00', 'K-POP, K-푸드, K-뷰티를 한자리에서 즐기는 글로벌 한류 박람회.',       '신규',   false),
('대전 도시 빛 축제 2025',    '지역축제', 'DMC 대덕연구단지 일원','2025-10-05', '17:00:00', '22:00:00', '대전시 대표 가을 빛 축제. LED 미디어아트와 버스킹 공연.',            '타임세일',true),
('한양대 대동제 2025',        '대학축제', '한양대학교 대운동장', '2025-05-28', '13:00:00', '22:00:00', '한양대 최대 봄 축제. 아이돌 초청 공연 및 주점 행사.',                 'D-3',    false),
('부산 국제 록 페스티벌',     '콘서트',   '부산 벡스코 야외광장', '2025-07-19', '16:00:00', '24:00:00', '록, 메탈, 인디를 아우르는 국내 최대 록 페스티벌.',                   'HOT',    true),
('서울 디자인 위크 2025',     '박람회',   '킨텍스 제2전시장',    '2025-11-08', '10:00:00', '19:00:00', '국내외 1000개 브랜드가 참가하는 국제 디자인 산업 박람회.',            '신규',   false);

INSERT INTO event_zone (event_no, zone_name, zone_type, total_capacity, remaining_capacity, price, color_code) VALUES
(1, '스탠딩존',  '스탠딩', 500, 342, 55000,  '#00E5CC'),
(1, '지정석 A',  '지정석', 300, 156, 88000,  '#6A4DFF'),
(1, '지정석 B',  '지정석', 400, 289, 66000,  '#FF6B35'),
(1, 'VIP석',     'VIP',    100,  23, 132000, '#FFB800');

INSERT INTO ticket_order (member_no, event_no, zone_no, event_name, zone_name, quantity, unit_price, payment_amount, reservation_status, payment_datetime, pg_provider, pg_tid, order_uid) VALUES
(1, 1, 2, '2025 서울 뮤직 페스티벌', '지정석 A', 2, 88000, 176000, '결제완료', '2025-05-10 14:32:00', 'toss', 'toss_test_tid_001', 'ORDER-UUID-20250510-001');

INSERT INTO coupon (member_no, coupon_name, discount_type, discount_value, min_purchase, expires_at) VALUES
(1, 'Gold 등급 전용 10% 할인쿠폰', 'PERCENT', 10.00, 50000,  '2025-12-31 23:59:59'),
(1, '여름 페스티벌 3,000원 할인',  'AMOUNT',  3000.00, 30000, '2025-08-31 23:59:59'),
(1, '첫 구매 감사 5% 쿠폰',        'PERCENT', 5.00,  10000,  '2025-06-30 23:59:59');

INSERT INTO review (member_no, event_no, order_no, rating, content) VALUES
(1, 1, 1, 5, '음향이 정말 훌륭했고 아티스트 라인업이 완벽했습니다. 내년에도 꼭 참가하고 싶어요!');

INSERT INTO inquiry (member_no, title, content, status, answer, answered_at) VALUES
(1, '티켓 환불 문의드립니다', '불가피한 사정으로 환불을 원합니다. 환불 정책이 어떻게 되나요?', '답변완료', '안녕하세요. 행사 7일 전까지는 100% 환불이 가능합니다. 마이페이지 > 내 티켓에서 직접 취소하시거나, 고객센터로 연락 주시면 안내 드리겠습니다.', '2025-05-11 09:30:00');

-- ============================================================
-- 모든 테이블의 RLS(Row Level Security) 비활성화 (퍼블릭 읽기/쓰기 허용)
-- ============================================================
ALTER TABLE member DISABLE ROW LEVEL SECURITY;
ALTER TABLE event DISABLE ROW LEVEL SECURITY;
ALTER TABLE event_zone DISABLE ROW LEVEL SECURITY;
ALTER TABLE coupon DISABLE ROW LEVEL SECURITY;
ALTER TABLE ticket_order DISABLE ROW LEVEL SECURITY;
ALTER TABLE cart DISABLE ROW LEVEL SECURITY;
ALTER TABLE wishlist DISABLE ROW LEVEL SECURITY;
ALTER TABLE review DISABLE ROW LEVEL SECURITY;
ALTER TABLE inquiry DISABLE ROW LEVEL SECURITY;